chore: migrate http handlers to annotation based api (#710)
### Motivation
We recently introduced a new http annotation api and all of our existing handlers should use that api as well as it cleans up a lot of code and is much simpler to understand.

### Modification
 - Migrate all existing http handlers to the annotation based api
 - Fix some request handling inconsistencies
 - Fix wrong `cancelNext` call in all handlers (without a paramater it's a getter not a setter)
 - Remove WebSocket ticket system as it has no benifit
 - Remove file serve http helpers to prevent users from building a file serving server using inbuild api
 - Fix some last issues discovered with the annotation api while migrating

### Result
Much cleaner http handlers and a lot less code overall.